--- a/style.css
+++ b/style.css
@@ -40,8 +40,19 @@
     align-items: center;
   }
 
-  ol {
+  .kerboard {
+    position: absolute;
+    bottom: 0px;
+  }
+
+  ol{
     line-height: 200%;
+  }
+
+  ul {
+    list-style: none;
+    padding-left: 0%;
+    line-height: 150%;
   }
 
   #pause-btn {
